compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_non_local_gaurd_var.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 934
expression: "fn one() { 1 }\nfn main() { case 1 { _ if one -> 1 } }"
snapshot_kind: text
---
----- SOURCE CODE
fn one() { 1 }
fn main() { case 1 { _ if one -> 1 } }

----- ERROR
error: Invalid guard variable
  ┌─ /src/one/two.gleam:2:27
  │
2 │ fn main() { case 1 { _ if one -> 1 } }
  │                           ^^^ Is not locally defined

Variables used in guards must be either defined in the function, or be an
argument to the function. The variable `one` is not defined locally.
